--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -43,7 +43,7 @@
                             <p>
                                 Lass deinen Schülern und deren Eltern individuelle Links zum Erklären des Einverständnisses digital oder analog zukommen. Bei Abschluss der Registrierung wird ein Loginpasswort für den Schüler erstellt.
                             </p>
-                            <p>Für alle Schüler ohne vollständige Einverständniserklärung:</p>
+                            <p>Für alle <strong>{{ studentsWithoutConsent }} Schüler</strong> ohne vollständige Einverständniserklärung:</p>
                             <button class="btn btn-secondary btn-send-links-emails">
                                 Links an Schüler E-Mail Adressen senden
                             </button>
