--- a/static/styles/help/icon-link-group.scss
+++ b/static/styles/help/icon-link-group.scss
@@ -1,8 +1,8 @@
 @import "../lib/bootstrap/scss/bootstrap-flex";
 
 .link-wrapper {
-  height: 5rem;
 
+  padding: 16px 8px;
   .icon-link {
     display: flex;
     align-items: center;
@@ -11,42 +11,59 @@
     text-decoration: none;
     color: #333;
 
-    .icon-wrapper {
+    .item-wrapper {
       transition: all .2s ease-in-out;
-      padding: 0 8px;
     }
 
     i {
+      text-align: center;
       display: block;
       font-size: 1.8rem;
+    }
+    img {
+      display: block;
+      margin: 0 auto;
+      height: 3rem;
+      max-width: 100%;
+      max-height: 100%;
     }
 
     &:hover,
     &:focus {
       outline: none;
 
-      .icon-wrapper {
+      .item-wrapper {
         transform: scale(1.1);
         text-shadow: 0 2px 5px rgba(51, 51, 51, .2);
       }
     }
   }
-}
 
-@include media-breakpoint-down(xs) {
-  .link-wrapper {
-    &:nth-of-type(4) {
-      border-bottom-right-radius: 4px;
+  &:first-of-type {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+  }
+  &:last-of-type {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+  }
+
+  @include media-breakpoint-down(sm) {
+    &:first-of-type {
+      border-bottom-left-radius: 0;
     }
-
-    &:nth-of-type(3) {
+    &:nth-of-type(2) {
+      border-top-right-radius: 4px;
+    }
+    &:nth-last-of-type(2) {
       border-bottom-left-radius: 4px;
     }
+    &:last-of-type {
+      border-top-right-radius: 0;
+    }
   }
-}
 
-@include media-breakpoint-up(sm) {
-  .link-wrapper {
+  @include media-breakpoint-up(sm) {
     &:nth-of-type(4) {
       border-bottom-right-radius: 4px;
     }
@@ -56,3 +73,4 @@
     }
   }
 }
+
