--- a/views/help/contact.hbs
+++ b/views/help/contact.hbs
@@ -2,14 +2,14 @@
   <p>Wen möchtest du kontaktieren?</p>
   <fieldset class="switch_wrapper" id="message_target">
     <div class="switch">
-      <input type="radio" id="admin" name="message_target" value="admin" checked>
+      <input type="radio" id="admin" name="message_target" value="admin">
       <label for="admin" tabindex="0" role="button">Admin</label>
       <input type="radio" id="team" name="message_target" value="team">
       <label for="team" tabindex="0" role="button"> {{theme.short_title}}-Team</label>
     </div>
   </fieldset>
 
-  <form class="admin_form" action="/helpdesk" method="post">
+  <form class="admin_form hidden" action="/helpdesk" method="post">
     {{> "help/forms/form_admin"}}
     <button type="submit">Absenden</button>
   </form>
