--- a/views/help/search.hbs
+++ b/views/help/search.hbs
@@ -12,6 +12,7 @@
         <i class="fa fa-search search-icon" aria-hidden="true"></i>
         <i class="fa fa-spinner fa-spin load-icon" aria-hidden="true"></i>
         <input class="search" type="text" placeholder="suchen..." autocomplete="false">
+        <i class="fa fa-times clear-icon" aria-hidden="true"></i>
     </div>
     <div class="live-search-results">
         {{! the template will be inserted (populated with content) here}}
