--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -26,9 +26,13 @@
                                 Keine Einverständniserklärung vorhanden &emsp;
                                 <i class="fa fa-check consent-status"></i>
                                 Eltern haben zugestimmt &emsp;
-                                <i class="fa fa-check double-check consent-status"></i>
-                                <i style="position: relative; left: -6px" class="fa fa-check double-check consent-status"></i>
-                                Alle Zustimmungen vorhanden
+                                <div>
+                                    <span>
+                                        <i class="fa fa-check double-check consent-status"></i>
+                                        <i class="fa fa-check double-check consent-status"></i>
+                                    </span>
+                                    <span>Alle Zustimmungen vorhanden</span>    
+                                </div>
                             </center>
                         </div>
                     </div>
