--- a/views/administration/users_edit.hbs
+++ b/views/administration/users_edit.hbs
@@ -118,7 +118,7 @@
                                         <button class="btn btn-secondary btn-delete">Benutzer löschen</button>
                                     {{/ifCond}}
                                     <button class="btn btn-secondary btn-invitation-link-with-hash {{#if editTeacher}}teacher{{else}}student{{/if}}"
-                                    {{#ifeq consentStatusIcon '<i class="fa fa-check consent-status"></i>'}}disabled title="Der Nutzer ist bereits registriert"{{/ifeq}}>
+                                    {{#ifeq consentStatusIcon '<i class="fa fa-check consent-status double-check"></i><i class="fa fa-check consent-status double-check"></i>'}}disabled title="Der Nutzer ist bereits registriert"{{/ifeq}}>
                                         Persönlichen Einladungslink generieren
                                     </button>
                                 {{/unless}}
