--- a/static/styles/help/search.scss
+++ b/static/styles/help/search.scss
@@ -92,7 +92,7 @@
       transform: rotate(90deg);
     }
 
-    .clear-icon {
+    .hasContent ~ .clear-icon {
       visibility: visible;
       opacity: 1;
     }
