--- a/static/styles/help/icon-link-group.scss
+++ b/static/styles/help/icon-link-group.scss
@@ -1,18 +1,20 @@
 @import "../lib/bootstrap/scss/bootstrap-flex";
 
 .link-wrapper {
-
-  padding: 16px 8px;
   .icon-link {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100%;
     text-decoration: none;
-    color: #333;
+    color: $fontColor;
 
-    .item-wrapper {
-      transition: all .2s ease-in-out;
+    padding: 16px 8px;
+    transition: background-color .2s ease-in-out;
+    &:hover,
+    &:focus {
+      border-radius: 4px;
+      background-color: $colorLightGrey;
     }
 
     i {
@@ -27,16 +29,10 @@
       max-width: 100%;
       max-height: 100%;
     }
-
-    &:hover,
-    &:focus {
-      outline: none;
-
-      .item-wrapper {
-        transform: scale(1.1);
-        text-shadow: 0 2px 5px rgba(51, 51, 51, .2);
-      }
+    i, img {
+      margin-bottom: .5em;
     }
+
   }
 
   &:first-of-type {
