--- a/views/help/icon-card.hbs
+++ b/views/help/icon-card.hbs
@@ -1,7 +1,7 @@
 <div class="icon-card {{class}}" id="{{id}}">
     <div class="icon-card__content">
         {{#if icon}}
-            <a href="#{{id}}" class="icon-card__icon">
+            <a href="#{{id}}" class="icon-card__icon" tabindex="-1">
                 <i class="fa fa-fw {{icon}}" aria-hidden="true"></i>
             </a>
         {{/if}}
