--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -1,7 +1,7 @@
 <footer class="hide-inline small-footer">
     <div class="imprint">
         <div class="center">
-            <img src="/images/footer-logo.png"/>
+            <img src="/images/footer-logo.png" alt="Anbieterlogo" />
             <span>&copy; 2018 {{theme.short_title}} </span>
 
             <div>
