--- a/static/styles/help/icon-link-group.scss
+++ b/static/styles/help/icon-link-group.scss
@@ -5,12 +5,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color .2s ease-in-out;
+    padding: 16px 8px;
     height: 100%;
+
     text-decoration: none;
     color: $fontColor;
 
-    padding: 16px 8px;
-    transition: background-color .2s ease-in-out;
     &:hover,
     &:focus {
       border-radius: 4px;
@@ -18,18 +19,21 @@
     }
 
     i {
-      text-align: center;
       display: block;
+      text-align: center;
       font-size: 1.8rem;
     }
+
     img {
       display: block;
       margin: 0 auto;
-      height: 3rem;
       max-width: 100%;
+      height: 3rem;
       max-height: 100%;
     }
-    i, img {
+
+    i,
+    img {
       margin-bottom: .5em;
     }
 
@@ -39,6 +43,7 @@
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
   }
+
   &:last-of-type {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
@@ -48,12 +53,15 @@
     &:first-of-type {
       border-bottom-left-radius: 0;
     }
+
     &:nth-of-type(2) {
       border-top-right-radius: 4px;
     }
+
     &:nth-last-of-type(2) {
       border-bottom-left-radius: 4px;
     }
+
     &:last-of-type {
       border-top-right-radius: 0;
     }
@@ -69,4 +77,3 @@
     }
   }
 }
-
