--- a/static/styles/help/search.scss
+++ b/static/styles/help/search.scss
@@ -15,6 +15,7 @@
     padding: 0 16px;
     width: 100%;
     color: #333;
+    box-sizing: border-box;
 
     .fa,
     input {
@@ -43,29 +44,29 @@
       top: 0;
       right: 8px;
       transition: opacity .3s ease-in-out;
-      cursor: pointer;
-      padding: 16px;
       visibility: hidden;
       opacity: 0;
+      cursor: pointer;
+      padding: 16px;
     }
 
   }
 
   .live-search-results {
-    box-sizing: border-box;
     position: absolute;
     bottom: 0;
     transform: translateY(100%);
     visibility: hidden;
     z-index: 9999;
-    border: 1px solid rgba(0,0,0,.15);
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.258824),0 2px 10px 0 rgba(0,0,0,0.156863) !important;
+    border: 1px solid rgba(0, 0, 0, .15);
     border-radius: 8px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .258824), 0 2px 10px 0 rgba(0, 0, 0, .156863) !important;
     background: $colorWhite;
     padding: 8px;
     width: 100%;
     max-height: 25rem;
     -webkit-overflow-scrolling: touch; // sass-lint:disable-line no-vendor-prefixes
+    box-sizing: border-box;
     overflow-y: auto;
 
     a {
@@ -92,7 +93,7 @@
       transform: rotate(90deg);
     }
 
-    .hasContent ~ .clear-icon {
+    .hasContent~.clear-icon {
       visibility: visible;
       opacity: 1;
     }
