--- a/views/administration/forms/form-account-password.hbs
+++ b/views/administration/forms/form-account-password.hbs
@@ -1,10 +1,9 @@
 <div class="form-group">
-    <p>Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen. <br/>
-            Erlaubte Sonderzeichen sind: <code>!§$%&/()=?\;:,.#+*~</code></p>
+    {{> "lib/forms/password-hint"}}
     <div class="form-group">
         <label for="change_password">Passwort:</label>
         <input id="change_password" type="password" name="password" id="password" class="form-control form-control-lg" placeholder="***************" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
-title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen" required>
+title="{{> "lib/forms/password-hint" plaintext=true}}" required>
     </div>
     
 </div>
