--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -80,7 +80,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label>Vertretungs Lehrer</label>
+                    <label>Vertretungslehrer</label>
                     <select name="substitutionIds[]" multiple data-placeholder="Lehrer auswählen">
                         {{#each substitutions}}
                             <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
