--- a/views/firstLogin/firstLoginU14.hbs
+++ b/views/firstLogin/firstLoginU14.hbs
@@ -45,12 +45,11 @@
           </div>
         </div>
 
-        <p>Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen. <br/>
-            Erlaubte Sonderzeichen sind: <code>!§$%&/()=?\;:,.#+*~</code></p>
+        {{> "lib/forms/password-hint"}}
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
             <label>Neues Passwort: *</label>
-            <input class="form-control" id="password" name="password-1" type="password" placeholder="Neues Passwort" minlength="8" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$" title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen." required/>
+            <input class="form-control" id="password" name="password-1" type="password" placeholder="Neues Passwort" minlength="8" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$" title="{{> "lib/forms/password-hint" plaintext=true}}" required/>
           </div>
           <div class="form-group col-md-6 col-sm-12">
             <label>Wiederhole dein neues Passwort: *</label>
