--- a/views/registration/registration-employee.hbs
+++ b/views/registration/registration-employee.hbs
@@ -55,9 +55,7 @@
             value="{{user.email}}" required {{#if user.email}}readonly{{else}}autocomplete{{/if}} />
         </div>
 
-        <p style="margin-top:1rem;">Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen.
-            <br/>
-            Erlaubte Sonderzeichen sind: <code>!§$%&/()=?\;:,.#+*~</code></p>
+        {{> "lib/forms/password-hint" style="margin-top:1rem"}}
         <div class="row">
           <div class="form-group col-md-6 col-sm-12" style="margin-top:0;">
             <label>Passwort: *</label>
@@ -69,7 +67,7 @@
               placeholder="Passwort"
               minlength="8"
               pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
-              title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen."
+              title="{{> "lib/forms/password-hint" plaintext=true}}"
               required/>
           </div>
           <div class="form-group col-md-6 col-sm-12" style="margin-top:0;">
@@ -82,7 +80,7 @@
                     placeholder="Passwort wiederholen"
                     minlength="8"
                     pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
-                    title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen."
+                    title="{{> "lib/forms/password-hint" plaintext=true}}"
                     required/>
           </div>
         </div>
