--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -177,7 +177,7 @@
                        data-name="{{course.name}}"
                        redirect="/courses/">Kurs löschen</a>
                   {{/if}}
-                    <button class="btn btn-secondary btn-cancel">
+                    <button type="button" class="btn btn-secondary btn-cancel">
                         {{closeLabel}}
                     </button>
 
