izitoast added to node_modules and gulp

--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -3,15 +3,17 @@
         <link rel="stylesheet" href="/styles/lib/loggedin.css"/>
         <link rel="stylesheet" href="/styles/lib/feedback-button.css"/>
         <link rel="stylesheet" href="/vendor/introjs/introjs.min.css"/>
+        <link rel="stylesheet" href="/vendor-optimized/izitoast/dist/css/iziToast.min.css"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
         <script type="text/javascript" src="/vendor-optimized/firebasejs/4.8.1/firebase-app.js" defer></script>
         <script type="text/javascript" src="/vendor-optimized/firebasejs/4.8.1/firebase-messaging.js" defer></script>
-        <script src="/scripts/loggedin.js" type="text/javascript" defer></script>
         <script type="text/javascript" src="/vendor-optimized/mathjax/MathJax.js?config=TeX-AMS_HTML" defer></script>
+        <script type="text/javascript" src="/vendor-optimized/izitoast/dist/js/iziToast.min.js" defer></script>
         <script type="text/javascript" src="/vendor/introjs/intro.min.js" defer></script>
         <script type="text/javascript" src="/vendor/feathersjs/feathers.js" defer></script>
+        <script src="/scripts/loggedin.js" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "body"}}
