--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -1,150 +1,120 @@
 {{#extend "lib/loggedin"}}
-    {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/account/settings.css"/>
-    {{/content}}
+{{#content "styles" mode="append"}}
+<link rel="stylesheet" href="/styles/account/settings.css" />
+{{/content}}
 
-    {{#content "scripts" mode="append"}}
-        <script src="/scripts/settings.js" type="text/javascript" defer></script>
-    {{/content}}
+{{#content "scripts" mode="append"}}
+<script src="/scripts/settings.js" type="text/javascript" defer></script>
+{{/content}}
 
-    {{#content "page"}}
+{{#content "page"}}
 
-        {{message}}
-        {{error}}
+{{message}}
+{{error}}
 
-        <div class="route-account">
-            <form method="post">
-                {{#ifneq currentRole "Schüler"}}
-                <div class="form-group">
-                    <label>Vorname</label>
-                    <input type="text" class="form-control" name="firstName" value="{{ ../currentUser.firstName }}">
-                </div>
+<div class="route-account">
+    <form method="post">
+        {{#ifneq currentRole "Schüler"}}
+        <div class="form-group">
+            <label>Vorname</label>
+            <input type="text" class="form-control" name="firstName" value="{{ ../currentUser.firstName }}">
+        </div>
 
-                <div class="form-group">
-                    <label>Nachname</label>
-                    <input type="text" class="form-control" name="lastName" value="{{ ../currentUser.lastName }}">
-                </div>
-                {{/ifneq}}
+        <div class="form-group">
+            <label>Nachname</label>
+            <input type="text" class="form-control" name="lastName" value="{{ ../currentUser.lastName }}">
+        </div>
+        {{/ifneq}}
 
-                <div class="form-group">
-                    <span><Label>Geschlecht</Label><p class="text-muted" style="display: inline"> (optional)</p></span>
-                    <select class="form-control form-control-lg" type="text" name="gender">
-                        <option value="">Geschlecht auswählen</option>
-                        <option {{#ifeq currentUser.gender "male"}}selected{{/ifeq}} value="male">Männlich</option>
-                        <option {{#ifeq currentUser.gender "female"}}selected{{/ifeq}} value="female">Weiblich</option>
-                        <option {{#ifeq currentUser.gender "other"}}selected{{/ifeq}} value="other">Anderes</option>
-                    </select>
-                </div>
-
-                <div class="form-group">
-                    <label>E-Mail-Adresse</label>
-                    <input type="email" class="form-control" name="email" value="{{ currentUser.email }}">
-                </div>
-
-                <div class="form-group">
-                    <label>Aktuelles Passwort</label>
-                    <input type="password" name="password" class="form-control"
-                           placeholder="***************" required>
-                </div>
-
-                {{#userHasPermission "PASSWORD_EDIT"}}
-                <div class="form-group">
-                    <label>Neues Passwort <sup>*</sup></label>
-                    <input type="password" name="password_new" id="password_new" class="form-control"
-                           placeholder="***************"
-                           pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
-                           title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen">
-                </div>
-
-                <div class="form-group">
-                    <label>Neues Passwort <sup>*</sup></label>
-                    <input type="password" name="password_control" id="password_control"
-                           class="form-control" placeholder="***************">
-                </div>
-                {{/userHasPermission}}
-
-                <div class="form-group">
-                    <input type="submit" class="btn btn-primary"/>
-                </div>
-            </form>
-
-            <input type="hidden" name="userId" value="{{userId}}"/>
-
-            <span class="hint">
-                <sup>*</sup>
-                Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen.
+        <div class="form-group">
+            <span><Label>Geschlecht</Label>
+                <p class="text-muted" style="display: inline"> (optional)</p>
             </span>
+            <select class="form-control form-control-lg" type="text" name="gender">
+                <option value="">Geschlecht auswählen</option>
+                <option {{#ifeq currentUser.gender "male"}} selected{{/ifeq}} value="male">Männlich</option>
+                <option {{#ifeq currentUser.gender "female"}} selected{{/ifeq}} value="female">Weiblich</option>
+                <option {{#ifeq currentUser.gender "other"}} selected{{/ifeq}} value="other">Anderes</option>
+            </select>
         </div>
 
-        <div class="panel-group notification-div">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapse1" class="collapse-toggle"><label>Benachrichtigungseinstellungen</label><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></a>
-                </h4>
-                </div>
-                <div id="collapse1" class="panel-collapse collapse">
-
-                    <div class="notification">
-                        {{#if device}}
-                            <table width="100%" cellpadding="5px">
-                                <thead>
-                                <th></th>
-                                <th><label>Platform</label></th>
-                                </thead>
-                                <tbody>
-                                {{#each device}}
-                                    <tr id="{{this._id}}">
-                                        <td>{{#if this.selected}}<a href="/notification/device"
-                                                                    target="_blank"
-                                                                    data-method="delete"
-                                                                    data-device-id="{{this.token}}"
-                                                                    data-name="{{this.platform}}">
-                                            <i class="fa fa-trash-o"></i></a>
-                                        {{/if}}</td>
-                                        <td class="form-group">{{this.platform}}</td>
-                                    </tr>
-                                {{/each}}
-                                </tbody>
-                            </table>
-                        {{else}}
-                            <h5 class="text-muted text-center">
-                                <span>Keine Geräte eingetragen</span>
-                            </h5>
-                        {{/if}}
-                        <div class="panel-footer">
-                            <button type="button" class="btn btn-default btn-device"
-                                    onclick="requestPushPermission()">
-                                <i class="fa fa-bell" aria-hidden="true"></i>
-                                Benachrichtigungen
-                                aktivieren
-                            </button>
-
-                            <button type="button" class="btn btn-default send-test-notification">
-                                <i class="fa fa-paper-plane" aria-hidden="true"></i>
-                                Test-Benachrichtigung
-                                senden
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="form-group">
+            <label>E-Mail-Adresse</label>
+            <input type="email" class="form-control" name="email" value="{{ currentUser.email }}">
         </div>
 
-        {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
-            {{#content "body"}}
+        <div class="form-group">
+            <label>Aktuelles Passwort</label>
+            <input type="password" name="password" class="form-control" placeholder="***************" required>
+        </div>
 
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary btn-close">
-                        Abbrechen
-                    </button>
+        {{#userHasPermission "PASSWORD_EDIT"}}
+        <div class="form-group">
+            <label>Neues Passwort <sup>*</sup></label>
+            <input type="password" name="password_new" id="password_new" class="form-control" placeholder="***************"
+                pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$" title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen">
+        </div>
 
-                    <button type="submit" class="btn btn-primary btn-submit">
-                        Löschen
-                    </button>
-                </div>
-            {{/content}}
-        {{/embed}}
+        <div class="form-group">
+            <label>Neues Passwort <sup>*</sup></label>
+            <input type="password" name="password_control" id="password_control" class="form-control" placeholder="***************">
+        </div>
+        {{/userHasPermission}}
 
-    {{/content}}
+        <div class="form-group">
+            <input type="submit" class="btn btn-primary" />
+        </div>
+    </form>
+
+    <input type="hidden" name="userId" value="{{userId}}" />
+
+    <span class="hint">
+        <sup>*</sup>
+        Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen.
+    </span>
+</div>
+
+<div class="notification-div">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="panel-title">Benachrichtigungseinstellungen</h4>
+        </div>
+        <div class="notification">
+            <button type="button" class="btn btn-default btn-device btn-push-disabled hidden" onclick="requestPushPermission()">
+                <i class="fa fa-bell" aria-hidden="true"></i>
+                Benachrichtigungen
+                aktivieren
+            </button>
+
+            <button type="button" class="btn btn-default btn-device btn-push-enabled hidden" disabled="disabled">
+                <i class="fa fa-bell" aria-hidden="true"></i>
+                Benachrichtigungen
+                aktiviert
+            </button>
+
+            <button type="button" class="btn btn-default send-test-notification btn-push-enabled hidden">
+                <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                Test-Benachrichtigung
+                senden
+            </button>
+        </div>
+    </div>
+</div>
+
+{{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
+{{#content "body"}}
+
+<div class="modal-footer">
+    <button type="button" class="btn btn-secondary btn-close">
+        Abbrechen
+    </button>
+
+    <button type="submit" class="btn btn-primary btn-submit">
+        Löschen
+    </button>
+</div>
+{{/content}}
+{{/embed}}
+
+{{/content}}
 {{/extend}}
