made context switch course - files more easy
+ added footer margin in mobile

--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -160,6 +160,7 @@ footer {
 
 		@include media-breakpoint-down(xs) {
 			background: $colorBeige;
+			margin-top: 50px;
 
 			img {
 				clear: both;
