--- a/views/pwRecovery/pwrecovery.hbs
+++ b/views/pwRecovery/pwrecovery.hbs
@@ -36,8 +36,8 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label>Zur Kontrolle</label>
-                                        <input type="password" name="password_control" id="password_control" class="form-control form-control-lg" placeholder="***************" required>
+                                        <label>Neues Passwort wiederholen</label>
+                                        <input type="password" name="password_control" id="password_control" class="form-control form-control-lg" placeholder="***************" title="{{> "lib/forms/password-hint" plaintext=true}}" required>
                                     </div>
 
 
