--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -16,18 +16,18 @@
             <form method="post">
                 {{#ifneq currentRole "Schüler"}}
                 <div class="form-group">
-                    <label>Vorname</label>
+                    <label>Vorname:</label>
                     <input type="text" class="form-control" name="firstName" value="{{ ../currentUser.firstName }}">
                 </div>
 
                 <div class="form-group">
-                    <label>Nachname</label>
+                    <label>Nachname:</label>
                     <input type="text" class="form-control" name="lastName" value="{{ ../currentUser.lastName }}">
                 </div>
                 {{/ifneq}}
 
                 <div class="form-group">
-                    <span><Label>Geschlecht</Label><p class="text-muted" style="display: inline"> (optional)</p></span>
+                    <span><Label>Geschlecht:</Label><p class="text-muted" style="display: inline"> (optional)</p></span>
                     <select class="form-control form-control-lg" type="text" name="gender">
                         <option value="">Geschlecht auswählen</option>
                         <option {{#ifeq currentUser.gender "male"}}selected{{/ifeq}} value="male">Männlich</option>
@@ -37,19 +37,19 @@
                 </div>
 
                 <div class="form-group">
-                    <label>E-Mail-Adresse</label>
+                    <label>E-Mail-Adresse:</label>
                     <input type="email" class="form-control" name="email" value="{{ currentUser.email }}">
                 </div>
 
                 <div class="form-group">
-                    <label>Aktuelles Passwort</label>
+                    <label>Aktuelles Passwort: <sup>*</sup></label>
                     <input type="password" name="password" class="form-control"
                            placeholder="***************" required>
                 </div>
 
                 {{#userHasPermission "PASSWORD_EDIT"}}
                 <div class="form-group">
-                    <label>Neues Passwort <sup>*</sup></label>
+                    <label>Neues Passwort:</label>
                     <input type="password" name="password_new" id="password_new" class="form-control"
                            placeholder="***************"
                            pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
@@ -57,9 +57,10 @@
                 </div>
 
                 <div class="form-group">
-                    <label>Neues Passwort <sup>*</sup></label>
+                    <label>Neues Passwort wiederholen:</label>
                     <input type="password" name="password_control" id="password_control"
-                           class="form-control" placeholder="***************">
+                           class="form-control" placeholder="***************"
+                           title="{{> "lib/forms/password-hint" plaintext=true}}">
                 </div>
                 {{/userHasPermission}}
 
