--- a/views/administration/forms/form-classes-edit.hbs
+++ b/views/administration/forms/form-classes-edit.hbs
@@ -11,7 +11,7 @@
 {{/if}}
 
 <div class="form-group">
-    <label>Schuljahr *</label>
+    <label>Schuljahr <sup>*</sup></label>
     <select class="linked" name="schoolyear" data-linktext data-placeholder="Schuljahr auswählen" {{#ifCond edit '&&' isCustom}}{{#unless class.keepYear}}disabled="true"{{/unless}}{{/ifCond}}>
         {{#each schoolyears}}
             <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
@@ -40,7 +40,7 @@
 <section id="createnew">
     <div class="row">
         <div class="form-group col-sm-6 col-xs-12">
-            <label>Jahrgangsstufe *</label>
+            <label>Jahrgangsstufe <sup>*</sup></label>
             <select class="linked" name="grade" data-linktext data-placeholder="Jahrgangsstufe wählen" required  {{#if isCustom}}disabled{{/if}}>
                 <option disabled value>keine Auswahl</option>
                 {{#each gradeLevels}}
