--- a/views/administration/users_edit.hbs
+++ b/views/administration/users_edit.hbs
@@ -17,36 +17,36 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label>Vorname: *</label>
+                                <label>Vorname: <sup>*</sup></label>
                                 <input class="form-control" name="firstName" type="text" required value="{{user.firstName}}"/>
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label>Nachname: *</label>
+                                <label>Nachname: <sup>*</sup></label>
                                 <input class="form-control" name="lastName" type="text" required value="{{user.lastName}}"/>
                             </div>
                         </div>
                     </div>
                     <!--<div class="form-group">
-                        <label>Username: *</label>
+                        <label>Username: <sup>*</sup></label>
                         <input class="form-control" disabled="true" placeholder="Benutzername" name="displayName" type="text" value="{{user.displayName}}"/>
                     </div>-->
 
                     <div class="form-group">
-                        <label>E-Mail-Adresse: *</label>
+                        <label>E-Mail-Adresse: <sup>*</sup></label>
                         <input class="form-control linked" type="email" name="email" placeholder="user@schul-cloud.org" value="{{user.email}}" required>
                     </div>
                 {{#unless editTeacher}}
                     <div class="form-group">
-                        <label>Geburtsdatum: *</label>
+                        <label>Geburtsdatum: <sup>*</sup></label>
                         <input class="form-control linked" id="birthday" data-date data-min-date="{{datePickerTodayMinus 100 0 0}}" data-max-date="{{datePickerTodayMinus 4 0 0}}" name="birthday" type="text" required value="{{dateToPicker user.birthday}}"/>
                     </div>
 
                     <div class="row mb-2">
                         <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
-                            <Label>Geschlecht: *</Label>
+                            <Label>Geschlecht: <sup>*</sup></Label>
                             <select class="form-control form-control-lg" type="text" name="gender" required>
                                 <option value="noinfo" {{#ifeq user.gender 'noinfo'}}selected{{/ifeq}}>keine Angabe</option>
                                 <option value="male" {{#ifeq user.gender 'male'}}selected{{/ifeq}}>männlich</option>
