--- a/views/firstLogin/firstLoginExistingUserUE14.hbs
+++ b/views/firstLogin/firstLoginExistingUserUE14.hbs
@@ -22,7 +22,7 @@
         <p>Bitte gib dein Geburtsdatum an. Es wird benötigt, damit die Einwilligungserklärung gültig ist.</p>
         <div class="row">
             <div class="form-group col-md-6 col-sm-12">
-                <label>Geburtsdatum: *</label>
+                <label>Geburtsdatum: <sup>*</sup></label>
                 <input class="form-control linked" data-date data-min-date="{{datePickerTodayMinus 100 0 0}}" data-max-date="{{datePickerTodayMinus 14 0 0}}" value="{{datePickerTodayMinus 16 0 0 "DD.MM.YYYY"}}" name="studentBirthdate" type="text" required autocomplete="off" />
             </div>
         </div>
