--- a/views/firstLogin/firstLoginUE18.hbs
+++ b/views/firstLogin/firstLoginUE18.hbs
@@ -28,7 +28,7 @@
         <p>Bitte ändere das Startpasswort. Notiere dir das neue Passwort gleich und bewahre es gut auf!</p>
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
-            <label>Altes Passwort: *</label>
+            <label>Altes Passwort: <sup>*</sup></label>
             <input class="form-control" id="password_verification" name="password_verification" type="password" placeholder="*******" required/>
           </div>
         </div>
@@ -36,12 +36,15 @@
         {{> "lib/forms/password-hint"}}
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
-            <label>Neues Passwort: *</label>
-            <input class="form-control" id="password" name="password-1" type="password" placeholder="Neues Passwort" minlength="8" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$" title="{{> "lib/forms/password-hint" plaintext=true}}" required/>
+              <label>Neues Passwort: <sup>*</sup></label>
+            <input class="form-control" id="password" name="password-1" type="password" placeholder="Neues Passwort"
+                   pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
+                   minlength="8" title="{{> "lib/forms/password-hint" plaintext=true}}" required/>
           </div>
           <div class="form-group col-md-6 col-sm-12">
-            <label>Wiederhole dein neues Passwort: *</label>
-            <input class="form-control" id="password_control" name="password-2" type="password" placeholder="Neues Passwort wiederholen" required/>
+              <label>Neues Passwort wiederholen: <sup>*</sup></label>
+            <input class="form-control" id="password_control" name="password-2" type="password"
+                   placeholder="Neues Passwort wiederholen" title="{{> "lib/forms/password-hint" plaintext=true}}" required/>
           </div>
         </div>
 
