--- a/views/registration/registration-employee.hbs
+++ b/views/registration/registration-employee.hbs
@@ -38,19 +38,19 @@
         <p>Für die Nutzung der {{theme.short_title}} benötigen wir folgende Angaben:</p>
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
-            <label>Vorname: *</label>
+            <label>Vorname: <sup>*</sup></label>
             <input class="form-control linked" name="firstName" type="text" placeholder="Ihren Vornamen hier eingeben"
               value="{{user.firstName}}" required {{#if user.firstName}}readonly{{/if}}/>
           </div>
           <div class="form-group col-md-6 col-sm-12">
-            <label>Nachname: *</label>
+            <label>Nachname: <sup>*</sup></label>
             <input class="form-control linked" name="lastName" type="text" placeholder="Ihren Nachname hier eingeben" 
               value="{{user.lastName}}" required {{#if user.lastName}}readonly{{/if}}/>
           </div>
         </div>
 
         <div class="form-group">
-          <label>Ihre E-Mail-Adresse *</label>
+          <label>Ihre E-Mail-Adresse: <sup>*</sup></label>
           <input class="form-control linked" type="email" name="email" placeholder="lehrer@schul-cloud.org" 
             value="{{user.email}}" required {{#if user.email}}readonly{{else}}autocomplete{{/if}} />
         </div>
@@ -58,7 +58,7 @@
         {{> "lib/forms/password-hint" style="margin-top:1rem"}}
         <div class="row">
           <div class="form-group col-md-6 col-sm-12" style="margin-top:0;">
-            <label>Passwort: *</label>
+            <label>Passwort: <sup>*</sup></label>
             <input
               class="form-control linked"
               id="password"
@@ -71,7 +71,7 @@
               required/>
           </div>
           <div class="form-group col-md-6 col-sm-12" style="margin-top:0;">
-            <label>Passwort wiederholen: *</label>
+            <label>Passwort wiederholen: <sup>*</sup></label>
             <input
                     class="form-control"
                     id="password-control"
