--- a/views/firstLogin/firstLogin14_17.hbs
+++ b/views/firstLogin/firstLogin14_17.hbs
@@ -39,7 +39,7 @@
         
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
-              <label>E-Mail:</label>
+              <label>E-Mail: <sup>*</sup></label>
               <input class="form-control" type="email" name="student-email" placeholder="schueler@schul-cloud.org" title="Bitte gib eine gültige E-Mail-Adresse ein." value="{{currentUser.email}}" readonly required></input>
           </div>
         </div>
@@ -54,21 +54,21 @@
         <p>Bitte ändere das Startpasswort. Notiere dir das neue Passwort gleich und bewahre es gut auf!</p>
         <div class="row">
             <div class="form-group col-md-6 col-sm-12">
-                <label>Altes Passwort: *</label>
+                <label>Altes Passwort: <sup>*</sup></label>
                 <input class="form-control" id="password_verification" name="password_verification" type="password" placeholder="*******" required/>
           </div>
         </div>
 
-        <p>Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen. <br/>
-            Erlaubte Sonderzeichen sind: <code>!§$%&/()=?\;:,.#+*~</code></p>
+        {{> "lib/forms/password-hint"}}
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
-            <label>Neues Passwort: *</label>
-            <input class="form-control" id="password" name="password-1" type="password" placeholder="Neues Passwort" minlength="8" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$" title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen." required/>
+            <label>Neues Passwort: <sup>*</sup></label>
+            <input class="form-control" id="password" name="password-1" type="password" placeholder="Neues Passwort" minlength="8" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$" title="{{> "lib/forms/password-hint" plaintext=true}}" required/>
           </div>
           <div class="form-group col-md-6 col-sm-12">
-            <label>Wiederhole dein neues Passwort: *</label>
-            <input class="form-control" id="password_control" name="password-2" type="password" placeholder="Neues Passwort wiederholen" required/>
+            <label>Neues Password wiederholen: <sup>*</sup></label>
+            <input class="form-control" id="password_control" name="password-2" type="password" placeholder="Neues Passwort wiederholen"
+                   title="{{> "lib/forms/password-hint" plaintext=true}}" required/>
           </div>
         </div>
 
