auto resize iFrames for internal components like we did it at /help.

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -292,8 +292,15 @@ header {
     float:left;
 }
 
-.window-inline .content-wrapper {
-    padding: 20px !important;
+.window-inline {
+    .content-wrapper {
+        min-height: auto;
+        padding: 20px !important;
+    }
+    .content-min-height{
+        display: block;
+        flex: initial;
+    }
 }
 
 .content-min-height {
@@ -701,3 +708,4 @@ footer {
         display: none;
     }
 }
+
