removed line feed

--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -83,10 +83,7 @@
             </a>
             {{#if lessonId}}
                 <a class="btn btn-secondary" href="/courses/{{courseId._id}}/topics/{{lessonId}}"
-                   alt="Zum Thema der Aufgabe">
-                   
-                   Zum Thema
-                 </a>
+                   alt="Zum Thema der Aufgabe">Zum Thema</a>
             {{/if}}
         {{/if}}
     </div>
