help redesign - Phase 2 (#926)
* added basic live-search (without styling)

* integrated confluence via iFrame

TODO: update security policys in confluence

* refactored livesearch

* moved file

* bugfixing and code cleanup

* new more subtile loading animation

* Moved MathJax to submodule

* added feathersjs to local vendors

* added firebase and firebase-messaging to local vendors

* added contact form

* create component card +styling

* added some styles to the livesearch

* Kontaktformular styling

* wip

* finished contact form design

* first steps card ready

* added mathjax via npm

* Email card ready

* auto generate tutorial cards

* "Wissenswertes"-card ready

* "Nutzungshilfen" ready

* minor accessibility changes

* some formatting

* use the node module instead of a hard copy

* dependencies updated

* improved loading animation

* make loops more robust

* use folder vendor-optimized for already minified ressources

* cleanup

* Revert "dependencies updated"

This reverts commit 5e1420f42fd40eed49df9af399a0ad30b7ac7b22.

* moved files to vendor-optimized

* WIP

* copy node_modules to vendor-optimized

* update mathjax location in serviceworker

* added git change requests

* test + little fix

* accordion cards finished

* fix scroll issue and some minor style changes

* improved focus handling

* in clickable-card ausgelagert

* add Bootstrap grid for mobile

* remove echo from @mxrcx

* eMail card + ids

* added list of content

* restored releases

* remove old /release route

* E-Mail card text-Update

* layout prototype

* some iFrame changes

* fix page not loading

* some style refactoring

* minor style changes & new forms

* fix accessibility issue

* added code to display iFrame in full height

* code cleanup

* removed faq page because it's a conflunece page

* some refactoring & forms are working now

* disabled first s

--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -18,10 +18,10 @@
                     {{#content "card-body"}}
                     <ul>
                         {{#if false}}<li><a href="#erste_schritte">Erste Schritte</a></li>{{/if}}
-                        <li><a href="#nutzungshilfen">Nutzungshilfen</a></li>
                         {{#each tutorials}}
                             <li><a href="#{{this.title}}">{{this.title}}</a></li>
                         {{/each}}
+                        <li><a href="#nutzungshilfen">Nutzungshilfen</a></li>
                         <li><a href="#kontakt">Kontaktformular</a></li>
                         <li><a href="#email">Schreib uns eine E-Mail</a></li>
                         <li><a href="#ueber_das_projekt">Über das Projekt</a></li>
@@ -30,13 +30,11 @@
                     {{/content}}
                 {{/embed}}
 
-                {{#if false}}
                 {{#embed "help/icon-card" title="Erste Schritte" icon="fa-child" class="first-steps-card col-xs-12" id="erste_schritte"}}
                     {{#content "card-body"}}
                         {{> "help/icon-link-group" links=firstStepsItems link-class="col-sm-3"}}
                     {{/content}}
                 {{/embed}}
-                {{/if}}
 
                 {{#each tutorials}}
                     {{#embed "help/icon-card" title=this.title icon=this.icon id=this.title class="col-md-6"}}
@@ -45,14 +43,15 @@
                                 {{#each this.categories}}
                                     {{#if this.articles}}
                                         <div class="collapse__item">
-                                            <div class="collapse__title collapsed" data-toggle="collapse" data-target="#{{this.id}}" aria-expanded="false">
+                                            <button class="collapse__title collapsed" data-toggle="collapse" data-target="#collapsable-{{this.id}}"
+                                                aria-expanded="false" aria-controls="collapsable-{{this.id}}" type="button" tabindex="0">
                                                 <i class="fa fa-fw fa-chevron-right" aria-hidden="true" data-expand></i>
                                                 <i class="fa fa-fw fa-chevron-down" aria-hidden="true" data-collapse></i>
                                                 <h5>
                                                     {{this.title}}
                                                 </h5>
-                                            </div>
-                                            <ul id="{{this.id}}" class="collapse collapse__content">
+                                            </button>
+                                            <ul id="collapsable-{{this.id}}" class="collapse collapse__content">
                                                 {{#each this.articles}}
                                                     <li><a href="/help/confluence/{{this.id}}">
                                                         {{this.title}}
