--- a/views/help/search.hbs
+++ b/views/help/search.hbs
@@ -11,7 +11,8 @@
     <div class="search-container">
         <i class="fa fa-search search-icon" aria-hidden="true"></i>
         <i class="fa fa-spinner fa-spin load-icon" aria-hidden="true"></i>
-        <input class="search" type="text" placeholder="suchen..." autocomplete="false">
+        <input class="search" type="text" placeholder="suchen..." autocomplete="off" aria-label="Suche nach Hilfeartikeln">
+        <i class="fa fa-times clear-icon" aria-hidden="true"></i>
     </div>
     <div class="live-search-results">
         {{! the template will be inserted (populated with content) here}}
