--- a/static/styles/help/search.scss
+++ b/static/styles/help/search.scss
@@ -29,16 +29,38 @@
       background: transparent;
       padding: 12px;
     }
+
+    .search-icon {
+      transition: transform .3s ease-in-out;
+    }
+
+    .load-icon {
+      display: none;
+    }
+
+    .clear-icon {
+      position: absolute;
+      top: 0;
+      right: 8px;
+      transition: opacity .3s ease-in-out;
+      cursor: pointer;
+      padding: 16px;
+      visibility: hidden;
+      opacity: 0;
+    }
+
   }
 
   .live-search-results {
+    box-sizing: border-box;
     position: absolute;
     bottom: 0;
     transform: translateY(100%);
     visibility: hidden;
     z-index: 9999;
-    border: 1px solid $primaryColor;
-    border-radius: 4px;
+    border: 1px solid rgba(0,0,0,.15);
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.258824),0 2px 10px 0 rgba(0,0,0,0.156863) !important;
+    border-radius: 8px;
     background: $colorWhite;
     padding: 8px;
     width: 100%;
@@ -61,14 +83,6 @@
     }
   }
 
-  .search-icon {
-    transition: transform .3s ease-in-out;
-  }
-
-  .load-icon {
-    display: none;
-  }
-
   &.active {
     .live-search-results.active {
       visibility: visible;
@@ -76,6 +90,11 @@
 
     .search-icon {
       transform: rotate(90deg);
+    }
+
+    .hasContent ~ .clear-icon {
+      visibility: visible;
+      opacity: 1;
     }
   }
 
