hide back button when display inline

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -301,6 +301,10 @@ header {
         display: block;
         flex: initial;
     }
+    .mobile-nav-toggle,
+    .error-header-wrapper button.btn-primary {
+        display: none;
+    }
 }
 
 .content-min-height {
