--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -80,23 +80,30 @@
             <h4 class="panel-title">Benachrichtigungseinstellungen</h4>
         </div>
         <div class="notification">
-            <button type="button" class="btn btn-default btn-device btn-push-disabled hidden" onclick="requestPushPermission()">
-                <i class="fa fa-bell" aria-hidden="true"></i>
-                Benachrichtigungen
-                aktivieren
-            </button>
-
-            <button type="button" class="btn btn-default btn-device btn-push-enabled hidden" disabled="disabled">
-                <i class="fa fa-bell" aria-hidden="true"></i>
-                Benachrichtigungen
-                aktiviert
-            </button>
-
-            <button type="button" class="btn btn-default send-test-notification btn-push-enabled hidden">
-                <i class="fa fa-paper-plane" aria-hidden="true"></i>
-                Test-Benachrichtigung
-                senden
-            </button>
+            <div class="row-push-loading"><div class="row"><div class="col-sm"><i class="fa fa-spinner fa-spin"></i></div></div></div>
+            <div class="row">
+                    <div class="col-sm btn-push-disabled hidden">
+                <button type="button" class="btn btn-default btn-block btn-device" onclick="requestPushPermission()">
+                    <i class="fa fa-bell" aria-hidden="true"></i>
+                    Benachrichtigungen
+                    aktivieren
+                </button>
+            </div>   
+            <div class="col-sm btn-push-enabled hidden">
+                <button type="button" class="btn btn-default btn-block btn-device" disabled="disabled">
+                    <i class="fa fa-bell" aria-hidden="true"></i>
+                    Benachrichtigungen
+                    aktiviert
+                </button>
+            </div>   
+            <div class="col-sm btn-push-enabled hidden">
+                <button type="button" class="btn btn-default btn-block send-test-notification">
+                    <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                    Test-Benachrichtigung
+                    senden
+                </button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
