Implement downloading a sample CSV file

--- a/views/administration/forms/form-import.hbs
+++ b/views/administration/forms/form-import.hbs
@@ -2,7 +2,9 @@
 <input name="roles[]" type="hidden" data-force-value="true" value="{{roles}}" />
 
 <p>
-    Importiere Nutzerdaten per .csv-Datei (<a href="#">Beispiel</a>) und lass deinen Nutzern einen Registrierungslink zukommen.
+    Importiere Nutzerdaten per .csv-Datei
+    (<a href="#" id="csv-import-example">Beispiel</a>)
+    und lass deinen Nutzern einen Registrierungslink zukommen.
 </p>
 <p>
     Mehr Informationen zu Struktur der .csv-Datei, Klassenzuordnung und Ablauf des Registrierungsprozesses findest du im <a href="#">Hilfebereich</a>.
