Open confluence link in new tab

--- a/views/administration/forms/form-import.hbs
+++ b/views/administration/forms/form-import.hbs
@@ -7,7 +7,8 @@
     und lass deinen Nutzern einen Registrierungslink zukommen.
 </p>
 <p>
-    Mehr Informationen zu Struktur der .csv-Datei, Klassenzuordnung und Ablauf des Registrierungsprozesses findest du im <a href="#">Hilfebereich</a>.
+    Mehr Informationen zu Struktur der .csv-Datei, Klassenzuordnung und Ablauf des Registrierungsprozesses findest du
+    <a href="https://docs.schul-cloud.org/x/NYBgAw" target="_blank">hier</a>.
 </p>
 <p>
     <img src="/images/csv_example.png" />
