--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -184,13 +184,9 @@
                         </li>
 
                         {{#if currentSchoolData}}
-                            <li class="nav-item school-data">{{ currentSchoolData.name }}</li>
+                            <li class="nav-item school-data hidden-sm-down">{{ currentSchoolData.name }}</li>
                             {{#if currentSchoolData.logo_dataUrl}}
                                 <img class="nav-item federal-state" src="{{ currentSchoolData.logo_dataUrl }}" alt="Logo von {{currentSchoolData.name}}">
-                            {{else}}
-                                {{#if currentSchoolData.federalState}}
-                                    <img class="nav-item federal-state" src="{{ currentSchoolData.federalState.logoUrl }}" alt="Landeswappen">
-                                {{/if}}
                             {{/if}}
                         {{/if}}
 
@@ -198,7 +194,9 @@
                             <div class="btn-group" data-matomo-mask>
                                 <button type="button" class="btn btn-secondary dropdown-toggle account-toggle"
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <strong>{{ currentUser.displayName }} ({{ currentRole }})</strong>
+                                    <div class="avatar-circle" style="background:{{currentUser.avatarBackgroundColor}};" title='{{ currentUser.displayName }} ({{ currentRole }})'>
+                                        <span class="initials">{{ currentUser.avatarInitials }}</span>
+                                    </div>
                                 </button>
                                 <input type="hidden" name="testUserGroup" id="testUserGroup" value="{{ currentUser.testGroup }}" />
                                 <div class="dropdown-menu dropdown-menu-right">
